# django_distill_blog

./: .gitignore  conftest.py  data.json  manage.py  pyproject.toml
.github/workflows/: lint.yml  playwright.yml  publish.yml  ruff.yml  test.yml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_article_updated_at_navpage_updated_at.py  0002_navpage.py
blog/static/css/: style.css
blog/templates/blog/: article.html  base.html  index.html  nav_page.html  tag.html
blog/templates/blog/includes/: article_list.html  tag_cloud.html  tags.html
blog/templates/blog/tags/: nav.html
blog/templatetags/: blog_tags.py  nav.py
blog/tests/: conftest.py  test_models.py  test_tags.py  test_views.py  tests.py
distill_blog/: asgi.py  settings.py  urls.py  wsgi.py
functional_tests/: conftest.py  pages.py  tests.py
