[project]
name = "static-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-distill>=3.2.7",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "playwright>=1.51.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.0",
    "ruff>=0.11.6",
]
