[project]
name = "static-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-distill>=3.2.7",
    "markdown>=3.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="distill_blog.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
exclude = [
    "**/migrations/*.py",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "djlint>=1.36.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "ruff>=0.11.6",
]
functional-tests = [
    "playwright>=1.52.0",
    "pytest-playwright>=0.7.0",
]
